--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "postcss-cssnext": "^3.0.2"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "mongoose": "^5.0.0",
     "pug": "^2.0.0-rc.4"
   }
 }
