updated bcypt package

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple Web app for creating and storing secure passwords",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./app"
   },
   "repository": {
     "type": "git",
@@ -19,16 +19,16 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-postcss": "^7.0.1",
-    "postcss-cssnext": "^3.0.2"
+    "postcss-cssnext": "^3.1.0"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
-    "body-parser": "^1.18.2",
+    "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.1",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "mongoose": "^5.0.0",
+    "mongoose": "^5.2.1",
     "morgan": "^1.9.0",
-    "pug": "^2.0.0-rc.4"
+    "pug": "^2.0.3"
   }
 }
