--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Donatron/password_generator#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-minify": "^3.1.0",
     "gulp-postcss": "^7.0.1",
     "postcss-cssnext": "^3.1.0"
   },
