--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "client-install": "npm install --prefix client",
     "start": "node app.js",
-    "server": "nodemon server.js",
+    "server": "nodemon app.js",
     "client": "npm start --prefix client",
     "build": "babel presets es2015 src -d public/scripts",
     "dev": "concurrently \"npm run server\" \"npm run client\""
@@ -25,13 +25,14 @@
     "@babel/core": "^7.2.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0-beta.2",
     "gulp-postcss": "^7.0.1",
     "postcss-cssnext": "^3.1.0"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "connect-mongo": "^2.0.3",
@@ -39,6 +40,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.3.15",
     "morgan": "^1.9.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "validator": "^10.11.0"
   }
 }
